Fix overflow below 960px

--- a/src/components/organisms/Header/Header.module.css
+++ b/src/components/organisms/Header/Header.module.css
@@ -16,5 +16,6 @@
 @media screen and (max-width: 960px) {
     .header{
         gap: 0;
+        margin: 0 -1rem;
     }
 }
